# OPAQUE

./: .gitignore  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  cicd.ps1  cicd.sh  pyproject.toml  requirements.txt  setup.py
docs/: API.md  BUILD_GUIDE.md  DEVELOPER_GUIDE.md  QUICK_REFERENCE.md  VERSION_MANAGEMENT.md  console_system.md
examples/: README.md  custom_global_settings_example.py
examples/basic_example/: main.py
examples/basic_example/features/calculator/: __init__.py  model.py  presenter.py  view.py
examples/basic_example/features/data_analysis/: settings.py  state.py  window.py
examples/basic_example/features/data_viewer/: model.py  presenter.py  view.py
examples/basic_example/features/logging/: model.py  presenter.py  settings.py  view.py  window.py
examples/basic_example/services/: calculation_service.py  data_service.py  logging_service.py
examples/closeable_tab_example/: main.py
examples/console_example/: main.py
examples/mvp_example/: main.py
examples/mvp_example/features/: __init__.py
examples/mvp_example/services/: data_service.py  logging_service.py
examples/my_example/: main.py
examples/notification_example/: main.py
src/opaque/: __init__.py  services.py
src/opaque/build_tools/: __init__.py  builder.py  cli.py  nuitka_builder.py  pyinstaller_builder.py
src/opaque/core/: application.py  exceptions.py  model.py  presenter.py  py.typed  services.py  view.py
src/opaque/managers/: settings_manager.py  single_instance_manager.py  theme_manager.py  workspace_manager.py
src/opaque/models/: abstract_model.py  annotations.py  app_model.py  app_settings_model.py  application_model.py  configuration.py  console_model.py  field_descriptors.py  logger_model.py  model.py  notification_model.py  notification_settings_model.py  settings_model.py  workspace_model.py
src/opaque/presenters/: app_presenter.py  console_presenter.py  notification_presenter.py  presenter.py
src/opaque/services/: console_service.py  logger_service.py  notification_service.py  service.py  settings_service.py  single_instance_service.py  theme_service.py  version_service.py  workspace_service.py
src/opaque/settings/: global_settings.py
src/opaque/view/: app_view.py  application.py  view.py
src/opaque/widgets/: color_picker.py  mdi_window.py  toolbar.py
(+47 files in other folders)
